--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   http: ^1.1.0
   collection: ^1.17.2
   shared_preferences: ^2.2.2
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
